--- a/scss/common.scss
+++ b/scss/common.scss
@@ -114,3 +114,7 @@
 .round-border{
     border-radius: 50px;
 }
+
+.foo {
+	height: 100%;
+}
